crates/vox-codegen/tests/snapshots/golden_ts_test__golden_ts_emit@wire_format_round_trip.snap
---
source: crates/vox-codegen/tests/golden_ts_test.rs
assertion_line: 28
expression: combined
---
=== types.ts ===
export type Price = { readonly amount: string; readonly currency: string };



=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [
    {
      "name": "get_price",
      "route_path": "/api/query/get_price",
      "signature": "fn(item_id: str) -> Price"
    },
    {
      "name": "list_prices",
      "route_path": "/api/query/list_prices",
      "signature": "fn(category: str, limit: Option[int]) -> List[dec]"
    }
  ],
  "mutation_fns": [
    {
      "name": "record_payment",
      "route_path": "/api/mutation/record_payment",
      "signature": "fn(item_id: str, amount: dec, note: Option[str]) -> bool",
      "wraps_db_transaction": false
    }
  ],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== schemas.ts ===
import { z } from "zod";

export const PriceSchema = z.object({
  amount: z.string(),
  currency: z.string(),
});



=== vox-client.ts ===
// Generated by Vox — typed fetch client for @query / @mutation / @server
// Transport: GET + JSON query values for @query; POST + JSON body for @mutation / @server.
// Do not edit; regenerate with `vox build`.

import { z } from "zod";
import type { Price } from "./types";
import { PriceSchema } from "./schemas";

export class VoxApiError extends Error {
  constructor(public readonly status: number, public readonly path: string, public readonly responseText: string) {
    super(`${path} failed: ${status}${responseText ? ` — ${responseText.slice(0, 200)}` : ""}`);
    this.name = "VoxApiError";
  }
}

const BASE = ((import.meta as unknown as { env?: { VITE_API_URL?: string } }).env?.VITE_API_URL ?? "");

/** Build `?a=<json>&b=<json>` with keys sorted lexicographically (matches Axum BTreeMap decode). */
function voxQueryString(query: Record<string, unknown>): string {
  const keys = Object.keys(query).sort();
  if (keys.length === 0) return "";
  const parts = keys.map(
    (k) => `${encodeURIComponent(k)}=${encodeURIComponent(JSON.stringify(query[k]))}`,
  );
  return `?${parts.join("&")}`;
}

async function $get<T>(path: string, schema?: { parse: (x: any) => T }, query?: Record<string, unknown>, init?: RequestInit): Promise<T> {
  const url = BASE ? `${BASE}${path}` : path;
  const qs = query && Object.keys(query).length > 0 ? voxQueryString(query) : "";
  const r = await fetch(`${url}${qs}`, { method: "GET", ...init });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t);
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

async function $post<T>(path: string, schema?: { parse: (x: any) => T }, body?: unknown, init?: RequestInit): Promise<T> {
  const url = BASE ? `${BASE}${path}` : path;
  const r = await fetch(url, {
    method: "POST",
    headers: { "Content-Type": "application/json" },
    body: JSON.stringify(body ?? {}),
    ...init,
  });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t);
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

/** @query `get_price` → `/api/query/get_price` (GET) */
export async function get_price(args: { item_id: string }, init?: RequestInit): Promise<Price> {
  return $get<Price>("/api/query/get_price", PriceSchema, { item_id: args.item_id }, init);
}

/** @query `list_prices` → `/api/query/list_prices` (GET) */
export async function list_prices(args: { category: string, limit?: number }, init?: RequestInit): Promise<readonly string[]> {
  return $get<readonly string[]>("/api/query/list_prices", z.array(z.string()), { category: args.category, limit: args.limit }, init);
}

/** Server fn `record_payment` → `/api/mutation/record_payment` (POST) */
export async function record_payment(args: { item_id: string, amount: string, note?: string }, init?: RequestInit): Promise<boolean> {
  return $post<boolean>("/api/mutation/record_payment", z.boolean(), { item_id: args.item_id, amount: args.amount, note: args.note }, init);
}



=== openapi.json ===
{
  "components": {
    "schemas": {
      "Price": {
        "properties": {
          "amount": {
            "description": "Fixed-point decimal as string (wire-format-v1)",
            "type": "string",
            "x-vox-encoding": "decimal"
          },
          "currency": {
            "type": "string"
          }
        },
        "required": [
          "amount",
          "currency"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "description": "Generated from Vox source. Conforms to wire-format-v1.",
    "title": "vox-app",
    "version": "0.1.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/mutation/record_payment": {
      "post": {
        "operationId": "record_payment",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "amount": {
                    "description": "Fixed-point decimal as string (wire-format-v1)",
                    "type": "string",
                    "x-vox-encoding": "decimal"
                  },
                  "item_id": {
                    "type": "string"
                  },
                  "note": {
                    "type": "string"
                  }
                },
                "required": [
                  "item_id",
                  "amount"
                ],
                "type": "object"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "boolean"
                }
              }
            },
            "description": "Success"
          }
        },
        "summary": "POST /api/mutation/record_payment"
      }
    },
    "/api/query/get_price": {
      "get": {
        "operationId": "get_price",
        "parameters": [
          {
            "in": "query",
            "name": "item_id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Price"
                }
              }
            },
            "description": "Success"
          }
        },
        "summary": "GET /api/query/get_price"
      }
    },
    "/api/query/list_prices": {
      "get": {
        "operationId": "list_prices",
        "parameters": [
          {
            "in": "query",
            "name": "category",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "query",
            "name": "limit",
            "required": false,
            "schema": {
              "type": "number"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "description": "Fixed-point decimal as string (wire-format-v1)",
                    "type": "string",
                    "x-vox-encoding": "decimal"
                  },
                  "type": "array"
                }
              }
            },
            "description": "Success"
          }
        },
        "summary": "GET /api/query/list_prices"
      }
    }
  },
  "servers": [
    {
      "url": "/api/v1"
    }
  ]
}
